# rustledger

./: .envrc  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  .typos.toml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  DOCS_VALIDATION_REPORT.md  Dockerfile  Dockerfile.opencode  PLAN-fava-fixes.md  PLAN-formatter-preserve-comments.md  PLAN-refactor-large-files.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TESTING_ROADMAP.md  bacon.toml  clippy.toml  codecov.yml  deny.toml  flake.nix  justfile  opencode.jsonc  release-plz.toml  rust-toolchain.toml  treefmt.toml  tui.json
crates/rustledger-completion/: Cargo.toml  README.md
crates/rustledger-completion/src/: lib.rs
crates/rustledger-core/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-core/benches/: inventory_bench.rs
crates/rustledger-core/src/: amount.rs  cost.rs  directive.rs  display_context.rs  extract.rs  format.rs  identifiers.rs  implicit_prices.rs  intern.rs  inventory.rs  kani_proofs.rs  lib.rs  position.rs  shift_spans_impls.rs  span.rs  visit.rs
crates/rustledger-core/src/format/: align.rs  amount.rs  directives.rs  helpers.rs  mod.rs  transaction.rs
crates/rustledger-core/src/inventory/: booking.rs  mod.rs
crates/rustledger-core/src/synthetic/: edge_cases.rs  manifest.rs  mod.rs
crates/rustledger-core/tests/: property_tests.rs  synthetic_generation.rs  tla_fifo_bug_test.rs  tla_proptest.proptest-regressions  tla_proptest.rs
crates/rustledger-ffi-component/: Cargo.toml  README.md
crates/rustledger-ffi-component-tests/: Cargo.toml
crates/rustledger-ffi-component-tests/src/: lib.rs
crates/rustledger-ffi-component-tests/tests/: parity.rs
crates/rustledger-ffi-component/src/: convert.rs  lib.rs
crates/rustledger-ffi-component/wit/: world.wit
crates/rustledger-ffi-py/: Cargo.toml
crates/rustledger-ffi-py/src/: main.rs
crates/rustledger-importer/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/rustledger-importer/src/: config.rs  csv_importer.rs  csv_inference.rs  lib.rs  ofx_importer.rs  registry.rs  test_fixtures.rs  wasm.rs
crates/rustledger-importer/tests/: csv_amount_fixtures.rs  ofx_amount_fixtures.rs  wasm_importer_e2e.rs
crates/rustledger-lsp/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-lsp/src/: ledger_state.rs  lib.rs  main.rs  main_loop.rs  server.rs  snapshot.rs
crates/rustledger-lsp/src/handlers/: call_hierarchy.rs  code_actions.rs  code_lens.rs  completion.rs  completion_resolve.rs  declaration.rs  definition.rs  diagnostics.rs  document_color.rs  document_highlight.rs  document_links.rs  execute_command.rs  folding.rs  formatting.rs  hover.rs  import.rs  inlay_hints.rs  linked_editing.rs  mod.rs  on_type_formatting.rs  range_formatting.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  type_hierarchy.rs  utils.rs  workspace_symbols.rs
crates/rustledger-lsp/tests/: encoding_coverage.rs  lsp_protocol.rs  stdio_smoke.rs
crates/rustledger-lsp/tests/lsp_protocol/: harness.rs  quirks.rs
crates/rustledger-ops/: Cargo.toml  README.md
crates/rustledger-ops/data/: merchants.csv
crates/rustledger-ops/src/: categorize.rs  clamp.rs  dedup.rs  enrichment.rs  fingerprint.rs  lib.rs  llm.rs  merchants.rs  ml.rs  reconcile.rs  transfer.rs
crates/rustledger-parser/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-parser/benches/: parser_bench.rs
crates/rustledger-parser/examples/: bootstrap_format_compat.rs  diff_cst_vs_legacy.rs  divergence_categorize.rs  dump_cst_tree.rs  dump_top_level_directives.rs  find_comments_mismatch.rs
crates/rustledger-parser/fuzz/fuzz_targets/: fuzz_parse_line.rs
crates/rustledger-parser/src/: bom.rs  diagnostics.rs  error.rs  format.rs  lexer.rs  lib.rs  logos_lexer.rs  parser.rs  span.rs  token_parser.rs  winnow_parser.rs
crates/rustledger-parser/src/cst/: ast.rs  convert.rs  format.rs  lossless_tokens.rs  mod.rs  parser.rs  syntax_kind.rs  trivia.rs
crates/rustledger-parser/tests/: ast.rs  corpus_baseline.rs  corpus_baseline_format.rs  cst_baseline.rs  cst_vs_legacy_corpus.rs  format_compat.rs  fuzz_regressions.rs  parser_integration_test.rs  pipeline_invariants.rs  structured_directives.rs
crates/rustledger-parser/tests/baseline_common/: mod.rs
crates/rustledger-parser/tests/format_compat/: README.md
crates/rustledger-plugin/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/rustledger-plugin-types/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-plugin-types/src/: guest.rs  lib.rs
crates/rustledger-plugin-types/tests/: cost_number_wire_format.rs  guest_macro_compiles.rs  plugin_macro_compiles.rs
crates/rustledger-plugin/src/: convert.rs  lib.rs  native.rs  runtime.rs  sandbox.rs  test_helpers.rs  types.rs
crates/rustledger-plugin/src/convert/: from_wrapper.rs  mod.rs  (+1 more)
crates/rustledger-plugin/tests/: native_plugins_test.rs  pipeline_invariants.rs  plugin_determinism.rs  python_compat_cost_round_trip.rs  tla_proptest.rs  wasm_plugin_e2e.rs
crates/rustledger-plugin/wit/: world.wit
crates/rustledger-validate/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-validate/benches/: validate_bench.rs
crates/rustledger-validate/src/: error.rs  lib.rs
crates/rustledger-validate/tests/: booking_phase_invariants.rs  pipeline_invariants.rs  tla_proptest.rs  validation_integration_test.rs
crates/rustledger-wasm/: CHANGELOG.md  Cargo.toml  README.md  beancount.d.ts  beancount_wasm.d.ts
crates/rustledger-wasm/bindings/: index.d.ts  index.schema.json  types.py
crates/rustledger-wasm/examples/: tsrs_spike.rs
crates/rustledger-wasm/src/: api.rs  cache.rs  convert.rs  editor.rs  helpers.rs  lib.rs  parsed_ledger.rs  types.rs
crates/rustledger-wasm/tests/: wasm.rs  wasm_meta.rs
examples/wasm-plugin-duplicate-detect/: Cargo.toml
examples/wasm-plugin-duplicate-detect/src/: lib.rs
examples/wasm-plugin-template/: Cargo.toml  README.md
examples/wasm-plugin-template/src/: lib.rs
(+793 files in other folders)
