[package]
name = "rustledger-core"
description = "Core types for rustledger: Amount, Position, Inventory, and all directive types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../../README.md"

[lib]
bench = false

[features]
default = ["rkyv"]
# Enable rkyv serialization for binary cache
rkyv = ["dep:rkyv"]

[dependencies]
rust_decimal = { workspace = true, features = ["serde", "maths"] }
rust_decimal_macros = "1.40"
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rkyv = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "inventory_bench"
harness = false

[lints]
workspace = true
