[package]
name = "rustledger-core"
description = "Core types for rustledger: Amount, Position, Inventory, and all directive types"
version = "0.16.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[features]
default = ["rkyv"]
# Enable rkyv serialization for binary cache
rkyv = ["dep:rkyv"]
# Enable fuzz-harness-only constructors that bypass invariants.
# Off by default so normal builds can't call them — only fuzz targets
# and integration tests that explicitly want to stress trust-boundary
# code in convert bridges should opt in. The constructors are also
# `#[doc(hidden)]` so they don't appear in rustdoc either way.
fuzz = []

[dependencies]
rust_decimal = { workspace = true, features = ["serde", "maths"] }
rust_decimal_macros = "1.40"
jiff = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
rkyv = { workspace = true, optional = true }
rustc-hash.workspace = true
smallvec.workspace = true
imbl.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "inventory_bench"
harness = false

[lints]
workspace = true
