[package]
name = "rustledger-ffi-component"
description = "Rustledger embedding via WASI Preview 2 / the Component Model (WIT)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"
# Shipped as a prebuilt wasip2 component attached to GitHub releases
# (`rustledger-ffi-component-<version>.wasm`, see release-build.yml), but not
# published to crates.io — it is a wasm artifact, not a consumable Rust library.
publish = false

[lib]
# wasm32-wasip2 emits a component directly from a cdylib (no cargo-component).
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
serde_json.workspace = true
jiff.workspace = true
rustledger-booking.workspace = true
rustledger-core.workspace = true
rustledger-ops.workspace = true
rustledger-parser.workspace = true
rustledger-query.workspace = true
rustledger-validate.workspace = true
# Reused for the loader orchestration (`load_source`) and the core->DTO
# conversion (`directive_to_json`); the component maps those DTOs into WIT
# types. During the dual-ship window both crates coexist; the shared logic
# moves to a neutral home when the wasip1 surface is retired (Phase 5).
rustledger-ffi-wasi.workspace = true

[lints]
workspace = true
