[package]
name = "rustledger-importer"
description = "Import framework for rustledger - extract transactions from bank files"
version = "0.16.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[features]
default = []
# Load sandboxed `.wasm` importers (wave 2.3b). Pulls `wasmtime` (→
# `cranelift-codegen`), so it is OFF by default: a `--no-default-features`
# build stays slim and compiles on platforms where cranelift can't (e.g.
# Termux/aarch64). See #1427 / #867.
wasm-importer = [
  "dep:wasmtime",
  "dep:rmp-serde",
  "dep:serde",
  "dep:thiserror",
  "dep:rustledger-plugin",
]

[dependencies]
rustledger-core.workspace = true
rustledger-ops.workspace = true
rustledger-plugin = { workspace = true, features = ["wasm-runtime"], optional = true }
rustledger-plugin-types.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
regex.workspace = true
anyhow.workspace = true
format_num_pattern.workspace = true
csv.workspace = true
ofxy.workspace = true
# WASM importer loader (wave 2.3b). Mirrors the sandboxing model used by
# rustledger-plugin's directive-plugin runtime. We depend on
# rustledger-plugin (not just -plugin-types) for `convert::wrapper_to_directive`
# — the canonical wire-format → host-Directive converter, shared with the
# directive plugin path.
wasmtime = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
# `ofxy::body::Transaction::date_posted` returns `chrono::DateTime<Utc>`, so
# we need chrono in the dep tree to call its inherent `.format()` method.
# IMPORTANT: chrono types must NOT leak into this crate's public API — they
# are converted to `jiff::civil::Date` inside ofx_importer.rs at the boundary.
# When v1.0 ships, dropping ofxy or replacing it with a jiff-native OFX
# parser would let us remove chrono entirely.
chrono = "0.4"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
# WAT (WebAssembly text format) — used by wasm.rs unit tests to author
# tiny modules inline rather than shipping `.wasm` test fixtures.
wat = { workspace = true }

[lints]
workspace = true
