[package]
name = "rustledger-ops"
description = "Pure operations on beancount directives — dedup, categorize, reconcile"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["beancount", "accounting", "dedup", "categorize"]
categories = ["finance"]
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[dependencies]
rustledger-plugin-types.workspace = true
rust_decimal.workspace = true
jiff.workspace = true
blake3.workspace = true
regex.workspace = true

# ML stack — host-only. `ferrolearn-bayes` pulls `faer` → `spindle` →
# `atomic-wait`, which doesn't compile on `wasm32-unknown-unknown`
# (no `platform::wake_*` impl for the wasm target). The ML
# categorizer doesn't run in browsers/WASI today — gate the deps off
# wasm targets and gate the `ml` module body the same way. Same
# MultinomialNB classifier as the linfa-bayes predecessor it replaced
# (#1194), with a real `predict_proba`. `ferrolearn-core` brings the
# `Fit` trait into scope for `MultinomialNB::fit`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ferrolearn-bayes = "0.4"
ferrolearn-core = "0.4"
ndarray = "0.17"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
