[package]
name = "rustledger-ops"
description = "Pure operations on beancount directives — dedup, categorize, reconcile"
version = "0.16.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["beancount", "accounting", "dedup", "categorize"]
categories = ["finance"]
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[dependencies]
rustledger-core.workspace = true
rustledger-plugin-types.workspace = true
rust_decimal.workspace = true
jiff.workspace = true
blake3.workspace = true
regex.workspace = true

# Note: the ML categorizer (`ml` module) implements its own Multinomial
# Naive Bayes in pure Rust (std only) — no external ML/array crates. It
# previously used `ferrolearn-bayes` + `ndarray` (and `linfa-bayes`
# before that), which dragged in native deps (`atomic-wait`, then
# OpenBLAS via `ferray` in ferrolearn 0.5) that broke `wasm32` and
# ballooned the tree for a textbook classifier. The in-house version
# works on every target.

[dev-dependencies]
proptest.workspace = true
rustledger-parser.workspace = true

[lints]
workspace = true
