[package]
name = "rustledger-plugin-types"
description = "WASM plugin interface types for rustledger - use in your plugin crate"
version = "0.16.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["beancount", "plugin", "wasm", "types"]
categories = ["data-structures", "wasm"]
authors.workspace = true
readme = "README.md"

# This crate is designed to compile to wasm32-unknown-unknown
# Keep dependencies minimal and WASM-compatible

[dependencies]
serde = { workspace = true }
# `rmp-serde` is an optional dep so this crate stays minimal on the
# host (where `rustledger-importer` brings its own copy). The `guest`
# feature pulls it in for WASM-guest authors who consume the
# `wasm_importer_main!` macro — they need msgpack encode/decode at
# runtime to produce the exports the host expects.
rmp-serde = { workspace = true, optional = true }

[features]
default = []
# Enables the `guest` module + `wasm_importer_main!` macro. Add to
# your WASM importer crate's `Cargo.toml`:
#
# ```toml
# rustledger-plugin-types = { version = "0.15", features = ["guest"] }
# ```
guest = ["dep:rmp-serde"]

[dev-dependencies]
serde_json = { workspace = true }
rmp-serde = { workspace = true }

[lints]
workspace = true
