[package]
name = "rustledger-validate"
description = "Beancount validation with 26 error codes for ledger correctness"
version = "0.16.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
bench = false

[dependencies]
rustledger-core.workspace = true
rustledger-parser.workspace = true
rustledger-booking.workspace = true
# The `maths` feature provides `MathematicalOps::powi`, used by the
# public `balance_tolerance` helper. Currently it's pulled in
# transitively via `rustledger-core` thanks to Cargo workspace feature
# unification, but declaring it explicitly here pins the requirement
# to the surface that needs it — out-of-workspace consumers and
# future dep-graph refactors won't silently break compilation.
rust_decimal = { workspace = true, features = ["maths"] }
bigdecimal = "0.4"
thiserror.workspace = true
jiff.workspace = true
rayon.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
rust_decimal_macros = "1.40"
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "validate_bench"
harness = false

[lints]
workspace = true
