[package]
name = "example-plugin"
version = "0.1.0"
edition = "2021"
description = "Template for rustledger WASM plugins"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use the official types crate for compatibility
rustledger-plugin-types = { path = "../../crates/rustledger-plugin-types" }
# MessagePack for serialization (matching the host)
rmp-serde = "1.1"

[profile.release]
opt-level = "s"
lto = true
